workshop-10/manifests/cert-manager/ingress-resource-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  labels:
    app: nginx
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - nginx.example.com
    secretName: letsencrypt-prod
  rules:
  - host: nginx.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-letsencrypt-demo
          servicePort: 80
